--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,3 +10,20 @@
     background-color: pink;
     color: blue;
 }
+
+span{
+    padding-right: 5px;
+    padding-left: 5px;
+    border-top: 2px;
+    border-top-color: black;
+    border-bottom: 4px;
+    border-bottom-color: grey;
+    border-top-style: solid;
+    border-bottom-style: solid;
+}
+p{
+    border-width: 10px;
+    border-color: lightgreen;
+    border-style: ridge;
+    margin: 5px;
+}
