added font family stuff

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,9 +21,19 @@ span{
     border-top-style: solid;
     border-bottom-style: solid;
 }
+
 p{
     border-width: 10px;
     border-color: lightgreen;
     border-style: ridge;
     margin: 5px;
+}
+
+h1{
+    font-family: Roboto, sans-serif;
+    text-align: center;
+}
+
+body{
+    font-family: 'Courier New', Courier, monospace;
 }
